--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,13 @@
     font-family: 'Inter', sans-serif;
 }
 .topContainer{
-    background-color: #ed007f;
+    background-color: #94004f;
 }
 .nav-top{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 60%;
+    width: 69%;
     padding: 0 20px;
     
     
@@ -47,7 +47,7 @@
     font-size: x-small;
 }
 .nav-container{
-    background-color: #000;
+    background-color:  #ed007f;
     color: white;
 }
 nav{
@@ -80,4 +80,49 @@ nav .nav-left button{
 .sub-nav{
     padding-right: 20px;
     font-size: small;
+}
+.nav-bottom{
+    background-color: #000;
+    padding: 20px 30px;
+}
+.nav-bottom a{
+    text-decoration: none;
+    font-size: small;
+    color: #000;
+    padding: 6px 8px;
+    margin-right: 10px;
+    border-radius: 8px;
+}
+.nav-bottom a:nth-child(1):hover{
+    background-color: #fff;
+}
+.nav-bottom a:nth-child(1){
+    background-color: #ff432e;
+}
+.nav-bottom a:nth-child(2){
+    background-color: #fdef14;
+}
+.nav-bottom a:nth-child(3){
+    background-color: #ff85cb;
+}
+.nav-bottom a:nth-child(4){
+    background-color: #4aa8db;
+}
+.nav-bottom a:nth-child(5){
+    background-color: 	#b1eb00;
+}
+.nav-bottom a:nth-child(6){
+    background-color: 		#FF3F8E;
+}
+.nav-bottom a:nth-child(7){
+    background-color: #4aa8db;
+}
+.nav-bottom a:nth-child(8){
+    background-color: #ff85cb;
+}
+.nav-bottom a:nth-child(9){
+    background-color: 	#b1eb00;
+}
+.nav-bottom a:nth-child(10){
+    background-color: #FF3E58;
 }
