--- a/styles.css
+++ b/styles.css
@@ -89,10 +89,11 @@ nav .nav-left button{
 }
 .nav-bottom a{
     text-decoration: none;
-    font-size: x-small;
+    font-size:small;
     color: white;
-    padding: 10px 8px;
+    padding: 12px 8px;
     margin-right: 10px;
+   
     
 }
 /* .nav-bottom a:nth-child(1):hover{
