--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,10 @@ nav .nav-left button{
     height: 28px;
     padding: 0 10px;
     margin: 0 20px 0 0;
+    background-color: #94004f;
+    color: white;
+    border: none;
+    
 }
 .sub-nav{
     padding-right: 20px;
