--- a/postad.css
+++ b/postad.css
@@ -30,7 +30,12 @@ body{
 }
 .form-heading .clear{
     font-size: small;
-    color: #;
+    color: #323232;
+    cursor: pointer;
+    background-color: white;
+    padding: 4px 10px;
+    border-radius: 4px;
+
 }
  /* .category_wrapper{
     padding: 30px 0 16px 0;
