--- a/styles.css
+++ b/styles.css
@@ -49,10 +49,13 @@
     font-size: x-small;
 }
 .nav-container{
-    background-color:  #b1eb00;
-    /* background-color: #6acdee ; */
-    /* background-color: #FFF2F9; */
+     background-color:  #b1eb00;
+    /* background-color: #6acdee ; 
+    background-color: #FFF2F9; */
     color: #000;
+}
+.borderline{
+    border-bottom: 2px solid #323232;
 }
 nav{
     
