--- a/postad.css
+++ b/postad.css
@@ -57,6 +57,10 @@
     border-radius: 4px;
 
 }
+.form-heading .clear:hover{
+    background-color: #323232;
+    color: #fff;
+}
  /* .category_wrapper{
     padding: 30px 0 16px 0;
     display: flex;
