--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,10 @@ nav .nav-left button{
     padding-right: 20px;
     font-size: small;
 }
+.sub-nav a{
+   text-decoration: none;
+   color: #000;
+}
 .nav-bottom{
     background-color:  #333333;
     padding: 10px 30px;
