--- a/login.css
+++ b/login.css
@@ -50,5 +50,9 @@
     .welcome{
     text-align: center;
     padding: 40px 0 20px 0;
+    color: #fff;
     }
-    
+    .welcome span{
+        font-weight: bold;
+        color: #FA4EAB;
+    }
