--- a/login.css
+++ b/login.css
@@ -32,6 +32,13 @@
     .showPass{
         font-size: small;
         padding: 12px 0;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .showPass .left{
+        display: flex;
+        align-items: center;
     }
     .newTo_kiddo{
         font-size: small;
@@ -41,6 +48,9 @@
         padding-left: 4px;
         color: #b1eb00;
         
+    }
+    .newTo_kiddo span:hover{
+        color: #fff;
     }
     .body_wrapper{
         display: flex;
