--- a/postad.css
+++ b/postad.css
@@ -11,7 +11,7 @@
     width: 200px;
     height: 200px;
     position: relative;
-   bottom: 90px; 
+   bottom: 60px; 
    transform: rotate(-45deg);
    left: 40px;
    
@@ -20,20 +20,22 @@
     width: 200px;
     height: 200px;
     position: relative;
-   top: 290px;
+   top: 320px;
    right: 60px;
    transform: rotate(45deg);
    
 }
 .body_wrapper{
    display:flex;
-   margin: 100px 0;
+   margin: 50px 0;
+   color: #fff;
    
 }
 .body_container{
-    width: 60%; 
+    width: 50%; 
     /* background-color: #FE83C6; */
-    background-color: #FA4EAB;
+    /* background-color: #FA4EAB; */
+    background-color: #323232;
     margin: auto;
 
 }
@@ -54,8 +56,10 @@
     
     padding: 4px 10px;
     border-radius: 4px;
-    background-color: #323232;
-    color: #fff;
+    /* background-color: #323232; */
+    background-color: #FA4EAB;
+    /* color: #fff; */
+    color: #000;
 
 }
 .form-heading .clear:hover{
@@ -73,6 +77,7 @@
 padding: 6px;
 width: 100%;
 margin-top: 20px;
+border-radius: 4px;
 
 } 
 .form_body{
@@ -88,8 +93,9 @@ width: 50%;
 margin: 0 10px;
 }
 .form_submit{
-    background-color: #323232;
-    color: white;
+    /* background-color: #323232; */
+    background-color: #FA4EAB;
+    color: black;
     margin-bottom: 20px;
     cursor: pointer;
 }
