--- a/postad.css
+++ b/postad.css
@@ -98,6 +98,7 @@ margin: 0 10px;
     color: black;
     margin-bottom: 20px;
     cursor: pointer;
+    border: none;
 }
 .addphoto p{
     font-size: small;
