--- a/styles.css
+++ b/styles.css
@@ -52,8 +52,9 @@
 }
 .nav-container{
      background-color:  #b1eb00;
-    /* background-color: #6acdee ; 
-    background-color: #FFF2F9; */
+    /* background-color: #6acdee ; */
+    /* background-color: #FFF2F9;  */
+    
     color: #000;
     position: sticky;
     top:0
