--- a/dashboard.css
+++ b/dashboard.css
@@ -3,3 +3,14 @@
     padding: 0;
     box-sizing: border-box;
 }
+.app_container{
+    display: flex;
+}
+.app_container .navbar{
+    width: 250px;
+    min-width: 250px;
+    min-height: 100vh;
+    background-color: whitesmoke;
+    position: sticky;
+    top: 0;
+}
