--- a/dashboard.css
+++ b/dashboard.css
@@ -18,7 +18,11 @@
     top: 0;
 }
 
-.navbar span a{
+.app_container .navbar span a{
     text-decoration: none;
     color: #000;
+}
+.app_container .navbar ul li a{
+text-decoration: none;
+color: #212121;
 }
