--- a/dashboard.css
+++ b/dashboard.css
@@ -22,6 +22,9 @@
     text-decoration: none;
     color: #000;
 }
+/* .app_container .navbar ul{
+    gap: 16px;
+} */
 .app_container .navbar ul li a{
 text-decoration: none;
 color: #212121;
