--- a/dashboard.css
+++ b/dashboard.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Rethink+Sans:ital,wght@0,500;0,600;0,700;0,800;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Dancing+Script:wght@400;500;600;700&family=Rethink+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
 
 
@@ -27,11 +27,16 @@
     background-color: whitesmoke;
     position: sticky;
     top: 0;
+    border-right: 1px solid gainsboro;
 }
-
-.app_container .navbar span a{
+.app_container .navbar .logo_container{
+    padding: 6px 25px;
+}
+.app_container .navbar .logo_container a{
     text-decoration: none;
     color: #000;
+    font-family: 'Caveat', cursive;
+    font-size: 35px;
 }
 .app_container .navbar ul{
    padding: 0 10px;
