--- a/dashboard.css
+++ b/dashboard.css
@@ -59,6 +59,6 @@ border-radius: 5px;
 transition: 0.3s ease-out;
 }
 .app_container .navbar ul li a:hover{
-    background-color: rgb(232, 232, 232);
+    background-color: white;
     
 }
