--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css");
-
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Dancing+Script:wght@400;500;600;700&family=Rethink+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400&display=swap');
 @import url('https://fonts.cdnfonts.com/css/inter');
 *{
     margin: 0;
@@ -59,6 +59,12 @@
     color: #000;
     position: sticky;
     top:0
+}
+.nav-container .logo{
+    text-decoration: none;
+    color: #000;
+    font-family: 'Caveat', cursive;
+    font-size: 28px;
 }
 .borderline{
     border-bottom: 2px solid #323232;
