--- a/styles.css
+++ b/styles.css
@@ -250,7 +250,9 @@ nav .nav-left button{
     display: none;
  }
  #card{
-    display: grid;
-    grid-template-columns: repeat(5,1fr);
+    grid-template-columns: repeat(2,1fr);
  }
+ .dashboard{
+    margin: 8px;
+}
 }
