--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@
 }
 .left ul li a{
     text-decoration: none;
-    color: #000;
+    color: #fff;
     font-size: x-small;
 }
 .right ul{
@@ -53,7 +53,7 @@
 }
 .right ul li a{
     text-decoration: none;
-    color: #000;
+    color: #fff;
     font-size: x-small;
 }
 .first_hamburger{
