--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,8 @@
     
 }
 .item{
-    border: 1px solid red;
     text-align: center;
+   box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.2);
 }
 .productSpecify{
     margin-bottom: 8px;
