--- a/styles.css
+++ b/styles.css
@@ -206,7 +206,7 @@ nav .nav-left button{
     color: black;
 }
 .dashboard_title h3{
-    padding: 30px 30px;
+    padding: 30px 30px 0 30px;
     text-align: center;
 }
 
