--- a/styles.css
+++ b/styles.css
@@ -82,8 +82,9 @@ body{
     display: none;
 }
 .nav-container{
-     background-color:  #b1eb00;
-    /* background-color: #6acdee ; */
+    /* background-color: #3b91e6; */
+     /* background-color:  #b1eb00; */
+    background-color: #6acdee ;
     /* background-color: #FFF2F9;  */
     /* background-color: #c02415; */
     
