--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,16 @@ body{
     top:0
     
 }
+.dis{
+    padding-left: 6px;
+    padding-right: 6px;
+    background-color: #6acdee;
+    width: 20%;
+    border-bottom-right-radius: 10px;
+    
+}
+
+
 .item{
     border: 1px solid gainsboro;
     border-radius: 10px;
@@ -23,7 +33,7 @@ body{
 }
 .item:hover{
     /* text-align: center; */
-   box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.2);
+   box-shadow: 2px 2px 4px 0px rgba(106,205,238,0.75);
 }
 .productSpecify{
     margin-bottom: 8px;
