--- a/postad.css
+++ b/postad.css
@@ -95,8 +95,8 @@ margin: 0 10px;
 }
 .form_submit{
     /* background-color: #323232; */
-    background-color: #FA4EAB;
-    color: #fff;
+    background-color: #6acdee;
+    color: #000;
     margin-bottom: 20px;
     cursor: pointer;
     
