--- a/postad.css
+++ b/postad.css
@@ -57,9 +57,9 @@
     padding: 4px 10px;
     border-radius: 4px;
     /* background-color: #323232; */
-    background-color: #FA4EAB;
+    background-color: #6acdee;
     /* color: #fff; */
-    color: #fff;
+    color: #000;
 
 }
 .form-heading .clear:hover{
