--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
 }
+:root {
+    
+    --bg-color-2:#6acdee;
+}
 body{
     background-color: whitesmoke;
 }
@@ -29,7 +33,8 @@ body{
     object-fit: contain;
 }
 .img-bg{
-    background-color: #6acdee;
+    /* background-color: #6acdee; */
+    background: radial-gradient(#fff, var(--bg-color-2))
 }
 .item{
     border: 1px solid gainsboro;
