--- a/styles.css
+++ b/styles.css
@@ -251,6 +251,7 @@ nav .nav-left button{
 
 .discount-wrapper{
     margin-top: 5rem;
+    margin-bottom: 2rem;
 }
 .discount-wrapper img{
     height: 18rem;
