--- a/styles.css
+++ b/styles.css
@@ -240,6 +240,15 @@ nav .nav-left button{
     margin: 0 20px; 
     padding: 20px;
 }
+#newcard{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    color: #000;
+    gap: 20px;
+    font-size: small;
+    margin: 0 20px; 
+    padding: 20px;
+}
 
 .dashboard{
     margin: 24px 86px;
@@ -274,7 +283,39 @@ nav .nav-left button{
     border: 1px solid #fff;
     border-radius: 4px;
 }
+.cartbtn{
+    outline: none;
+    border: none;
+    padding-top: 6px;
+}
+.bonus{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    color: #000;
+    gap: 40px;
+    font-size: small;
+    margin: 0 88px 60px 88px; 
+    
+    
+}
 
+.bonus img{
+   width: 34rem;
+   height: 48rem;
+   
+}
+.bonus_heading{
+    position: relative;
+    top: 100px;
+    left: 28px;
+    
+}
+.color1{
+    color: #fff;
+}
+.color2{
+    color: #000;
+}
 
 
 @media screen and (max-width:912px) {
