--- a/styles.css
+++ b/styles.css
@@ -316,6 +316,15 @@ nav .nav-left button{
 .color2{
     color: #000;
 }
+.Signup{
+    display: flex;
+   justify-content: space-between;
+    align-items: center;
+    margin: 60px 0px;
+    padding: 60px 80px;
+    background-color: #111e3f;
+    color: #fff;
+}
 
 
 @media screen and (max-width:912px) {
