--- a/styles.css
+++ b/styles.css
@@ -171,8 +171,8 @@ nav .nav-left button{
 .nav-bottom{
     background-color:  #333333;
     padding: 10px 30px;
-    position: sticky;
-    top:0
+    /* position: sticky;
+    top: 0; */
 }
 .nav-bottom a{
     text-decoration: none;
@@ -320,12 +320,20 @@ nav .nav-left button{
     display: flex;
    justify-content: space-between;
     align-items: center;
-    margin: 60px 0px;
+    margin-top: 60px;
     padding: 60px 80px;
     background-color: #111e3f;
     color: #fff;
 }
-
+.bonus-btn{
+    padding: 4px 8px;
+    outline: none;
+    border: none;
+    background-color: #6acdee;
+}
+.signup-input{
+    padding: 4px 8px;
+}
 
 @media screen and (max-width:912px) {
     .nav-top{
